--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
-    "@types/node": "^22.7.5"
+    "@types/node": "^22.7.5",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.1"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.0.3"
   }
 }
