--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,12 @@
     "module": "commonjs",        
     "strict": true,              
     "esModuleInterop": true      
-  }
+  },
+  "include": [
+    "*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
 
